name:                web-reflex
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable web-reflex
  main-is:             Main.hs
  other-modules:       Db, Compare
  other-extensions:    FlexibleContexts, OverloadedStrings, RecursiveDo, LambdaCase, ScopedTypeVariables, ConstraintKinds, GeneralizedNewtypeDeriving
  build-depends:       base >=4.11 && <4.13,
                       text >=1.2 && <1.3,
                       reflex-dom >=0.5 && <0.6,
                       ghcjs-dom-jsffi,
                       network-uri,
                       containers,
                       lens,
                       patch,
                       aeson >=1.3 && <1.4
  default-language:    Haskell2010
